--- a/pliki/kod/zadanie34_kowa_kod.html
+++ b/pliki/kod/zadanie34_kowa_kod.html
@@ -32,6 +32,14 @@
             background-color: rgb(95, 158, 160);
             margin: 160 0 0 350;
         }
+
+        h3 {
+            width: 200pt;
+            height: 4cm;
+            border: dotted silver;
+            background-color: rgb(175, 238, 238);
+            margin: 80 0 0 10;
+        }
     </style>
 </head>
 <body>
